--- a/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
+++ b/Reciplease/Reciplease/View/Base.lproj/Main.storyboard
@@ -250,10 +250,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="dWm-cD-8IQ" userLabel="Picture">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="dWm-cD-8IQ" userLabel="Picture">
                                 <rect key="frame" x="0.0" y="88" width="414" height="269"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dh8-Vv-sCj" userLabel="Picture Stack View">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dh8-Vv-sCj" userLabel="Likes and Time Stack View">
                                 <rect key="frame" x="334" y="98" width="70" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes 👍🏻" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uxd-Yr-9Pq">
@@ -308,6 +308,9 @@
                                 <state key="normal" title="Get directions">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="getDirectionsButtonTapped:" destination="8bq-7a-PLS" eventType="touchUpInside" id="nIN-0J-7Bj"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bai-mP-OQl"/>
@@ -339,9 +342,22 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" image="star.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="favoriteButtonTapped:" destination="8bq-7a-PLS" eventType="touchUpInside" id="PtC-aQ-Ais"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="favoriteButton" destination="8Xe-Ns-Hy5" id="6Yk-2V-dpn"/>
+                        <outlet property="getDirectionButton" destination="gNN-7f-rav" id="jOP-FA-Jdk"/>
+                        <outlet property="ingredientListTextView" destination="Hxg-dy-b2E" id="03I-IU-y06"/>
+                        <outlet property="likesAndTimeStackView" destination="Dh8-Vv-sCj" id="YWb-rL-g5n"/>
+                        <outlet property="likesLabel" destination="uxd-Yr-9Pq" id="F1R-1F-dI9"/>
+                        <outlet property="recipePicture" destination="dWm-cD-8IQ" id="11w-pl-9RV"/>
+                        <outlet property="recipeTitle" destination="crq-pf-sFB" id="Gf8-YM-ouc"/>
+                        <outlet property="timeLabel" destination="yG8-Pp-4yG" id="S5B-CE-iXL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="un5-xH-eZy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -404,7 +420,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0pC-5D-W10" userLabel="Picture">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default pic" translatesAutoresizingMaskIntoConstraints="NO" id="0pC-5D-W10" userLabel="Picture">
                                 <rect key="frame" x="0.0" y="88" width="414" height="269"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="W0V-51-Toa" userLabel="Picture Stack View">
@@ -465,6 +481,9 @@
                                 <state key="normal" title="Get directions">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="getDirectionsButtonTapped:" destination="CBx-4Y-33W" eventType="touchUpInside" id="rY4-dP-D21"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lCK-jp-8cN"/>
@@ -495,9 +514,22 @@
                                 <state key="normal" image="star" catalog="system">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="favoriteButtonTapped:" destination="CBx-4Y-33W" eventType="touchUpInside" id="XYZ-qP-eCC"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="favoriteButton" destination="9Xf-83-EeW" id="fgt-yp-e9n"/>
+                        <outlet property="getDirectionsButton" destination="L4B-0j-Ijl" id="aCd-sP-fda"/>
+                        <outlet property="ingredientListTextView" destination="zc9-7r-Tzk" id="MTR-oi-9XX"/>
+                        <outlet property="likesAndTimeStackView" destination="W0V-51-Toa" id="rZN-mi-Slv"/>
+                        <outlet property="likesLabel" destination="bp2-z2-YVn" id="r3M-Qp-Qyi"/>
+                        <outlet property="recipePicture" destination="0pC-5D-W10" id="ndE-fa-CO3"/>
+                        <outlet property="recipeTitleLabel" destination="67X-j8-5PI" id="Ddm-d0-5E1"/>
+                        <outlet property="timeLabel" destination="yKZ-hE-GXw" id="Ynw-KA-nHQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5JA-0g-pBv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
